# ZombieGame

./: CMakeLists.txt  build.sh  file.json  imgui.ini  install.sh
src/: CMakeLists.txt  Player.cpp  Player.h  collision.h  main.cpp  tiledCube.cpp  tiledCube.h
src/resources/models/: pistol.mtl  spawn.fbx  spawn.glb
src/shaders/glsl330/: lighting.fs  lighting.vs
